# ShoruiCheckerAI

./: .gitignore  README.md  install-context-menu.ps1  package.json  uninstall-context-menu.ps1
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: tdd.yml
.github/workflows/: ci.yml  issue-tdd.yml
docs/: MODULARIZATION.md
scripts/logging/: README.md  chat-log.js  llm-wrapper.js
scripts/tdd/: README.md  from-issue-gh.js  from-issue.js  guard.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  claude_api.rs  code_review.rs  database.rs  error.rs  events.rs  gemini.rs  gemini_cli.rs  guidelines.rs  history.rs  lib.rs  main.rs  pdf_embed.rs  pdf_processor.rs  settings.rs  watcher.rs
src/utils/: analysis.js  clipboard.js  text.js  ui.js
tests/frontend/: analysis.test.js  clipboard.test.js  text.test.js  ui.test.js
