[package]
name = "shoruichecker"
version = "0.1.0"
description = "PDF整合性チェッカー"
authors = ["you"]
edition = "2021"

[lib]
name = "shoruichecker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
dirs = "5"
